# agentc

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.agentc/: manifest.json
agentc/: __main__.py  cli.py  ingest.py  ir.py  registry.py  util.py
agentc/adapters/: __init__.py  claude_code.py
docs/: plan.md
firecrawl/: .env.example  README.md  agent.toml
firecrawl/claude-code/: run.sh
firecrawl/claude-code/.claude/: settings.json
tests/: test_adapter_claude_code.py  test_cli.py  test_ingest.py  test_registry.py  test_util.py
tests/fixtures/skills/basic/: SKILL.md
tests/fixtures/skills/conditional/: SKILL.md
tests/fixtures/skills/with-refs/: SKILL.md
tests/fixtures/skills/with-refs/references/: foo.md
tests/fixtures/skills/with-refs/rules/: bar.md
